# msg-vector-search

./: .gitignore  INSTALL.md  README.md  check_mcp.py  config.json  config.py  main.py  minimal_mcp.py  package-lock.json  package.json  pyproject.toml  python_bridge.py  requirements.txt  setup.py  setup.sh  tsconfig.json
mcp-src/: index.ts
src/: __init__.py  initialize.py  server.py
src/core/: __init__.py
src/core/ai/: synthesizer.py
src/core/database/: __init__.py  connection.py  processor.py  user_mapper.py
src/core/embeddings/: __init__.py  processor.py  vector_db.py
src/core/search/: __init__.py  engine.py
src/core/utils/: __init__.py  hardware_optimizer.py
src/utils/: file_manager.py
